# FilterSim

./: CLAUDE.md  LICENSES.md  PLAN.md  README.md  SPEC.md  main.py  mfclab.spec  pyproject.toml
.claude/: settings.local.json
data/: rawdata.csv
reference/: mfc_bessel2.h
src/: chain_card.py  csv_dialog.py  csv_loader.py  fft_engine.py  filter_chain.py  main_window.py  metrics_engine.py  param_form.py  resources.py  scipy_preload.py  signal_context.py
src/filters/: __init__.py  base.py  biquad_lowpass.py  critical_damped_lpf.py  fir.py  iir_lpf.py  lead_compensator.py  median.py  moving_average.py
tests/: test_csv_loader.py  test_fft.py  test_filter_chain.py  test_filters.py  test_metrics.py
ui/: mainwindow.ui
